packages/ruff-autoboat/ruff_autoboat-0.14.12.tar.gz/ruff_autoboat-0.14.12/crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__fmt_off_docstring.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def test():
    # fmt: off
    """ This docstring does not
        get formatted
    """

    # fmt: on

    but + this  + does

def test():
    # fmt: off
        # just for fun
    # fmt: on
        # leading comment
    """   This docstring gets formatted
    """ # trailing comment

    and_this +  gets + formatted + too
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
def test():
    # fmt: off
    """ This docstring does not
        get formatted
    """

    # fmt: on

    but + this + does


def test():
    # fmt: off
        # just for fun
    # fmt: on
    # leading comment
    """This docstring gets formatted"""  # trailing comment

    and_this + gets + formatted + too
```


### Output 2
```
indent-style               = space
line-width                 = 88
indent-width               = 2
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
def test():
  # fmt: off
  """ This docstring does not
        get formatted
    """

  # fmt: on

  but + this + does


def test():
  # fmt: off
      # just for fun
  # fmt: on
  # leading comment
  """This docstring gets formatted"""  # trailing comment

  and_this + gets + formatted + too
```
