packages/ruff-autoboat/ruff_autoboat-0.14.12.tar.gz/ruff_autoboat-0.14.12/crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__mixed_space_and_tab.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def test():
 # fmt: off
 	a_very_small_indent
 	(
not_fixed
 )

 	if True:
# Fun tab, space, tab, space. Followed by space, tab, tab, space
	 	 pass
 		 more
 	else:
  	   other
 # fmt: on

```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
def test():
    # fmt: off
    a_very_small_indent
    (
not_fixed
 )

    if True:
    # Fun tab, space, tab, space. Followed by space, tab, tab, space
    	 pass
    	 more
    else:
    	   other


# fmt: on
```


### Output 2
```
indent-style               = space
line-width                 = 88
indent-width               = 2
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
def test():
  # fmt: off
  a_very_small_indent
  (
not_fixed
 )

  if True:
  # Fun tab, space, tab, space. Followed by space, tab, tab, space
  	 pass
  	 more
  else:
  	   other


# fmt: on
```


### Output 3
```
indent-style               = tab
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
def test():
	# fmt: off
	a_very_small_indent
	(
not_fixed
 )

	if True:
	# Fun tab, space, tab, space. Followed by space, tab, tab, space
		 pass
		 more
	else:
		   other


# fmt: on
```
